Changes in screens UI elements a bit

--- a/MyDailyPal/Base.lproj/Main.storyboard
+++ b/MyDailyPal/Base.lproj/Main.storyboard
@@ -181,7 +181,7 @@ tapping PIN.</string>
                                 <color key="backgroundColor" red="0.0" green="0.69803921570000005" blue="0.85882352939999995" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                             </view>
                             <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="FoP-KF-0c2">
-                                <rect key="frame" x="50" y="267" width="264" height="60"/>
+                                <rect key="frame" x="50" y="267" width="275" height="60"/>
                                 <subviews>
                                     <textField opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="bezel" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="IA5-LJ-tyf">
                                         <rect key="frame" x="0.0" y="0.0" width="60" height="60"/>
@@ -204,7 +204,7 @@ tapping PIN.</string>
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
                                     <textField opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="bezel" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="7jB-vx-3qk">
-                                        <rect key="frame" x="136" y="0.0" width="60" height="60"/>
+                                        <rect key="frame" x="136" y="0.0" width="71" height="60"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="60" id="HsN-sl-hwJ"/>
                                             <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="60" id="Vhk-1v-4kX"/>
@@ -215,7 +215,7 @@ tapping PIN.</string>
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
                                     <textField opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="bezel" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="e3U-zB-kye">
-                                        <rect key="frame" x="204" y="0.0" width="60" height="60"/>
+                                        <rect key="frame" x="215" y="0.0" width="60" height="60"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="60" id="HhB-yS-p1w"/>
                                             <constraint firstAttribute="width" constant="60" id="SwH-GY-y7k"/>
@@ -417,6 +417,42 @@ tapping PIN.</string>
                     <view key="view" contentMode="scaleToFill" id="rw7-7F-teI">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="ZtH-OT-HwH">
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="cell" rowHeight="50" id="jSe-eW-R32">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="50"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="jSe-eW-R32" id="ZLm-IZ-6g4">
+                                            <rect key="frame" x="0.0" y="0.0" width="342" height="49.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IlG-Al-Aje">
+                                                    <rect key="frame" x="300" y="1" width="42" height="42"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <state key="normal" title="Button" image="timer.png"/>
+                                                </button>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Zwc-fz-ijx">
+                                                    <rect key="frame" x="8" y="0.0" width="297" height="44"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="JtM-9x-Pdc" id="JBw-UX-ejX"/>
+                                    <outlet property="delegate" destination="JtM-9x-Pdc" id="50N-rb-efJ"/>
+                                    <outlet property="prefetchDataSource" destination="JtM-9x-Pdc" id="Mkq-MS-ims"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="eJy-fn-ScI"/>
                     </view>
@@ -426,7 +462,7 @@ tapping PIN.</string>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="85i-TG-9M5" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-697" y="-134"/>
+            <point key="canvasLocation" x="-698.39999999999998" y="-134.48275862068968"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="QA3-Vs-cyR">
@@ -449,5 +485,6 @@ tapping PIN.</string>
     </scenes>
     <resources>
         <image name="Loading-welcome screen image" width="3333" height="5000"/>
+        <image name="timer.png" width="512" height="512"/>
     </resources>
 </document>
