--- a/MyDailyPal/Base.lproj/Main.storyboard
+++ b/MyDailyPal/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="vwY-3U-y95">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="yGB-nJ-dSN">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -89,7 +89,7 @@ tapping PIN.</string>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="711.20000000000005" y="32.833583208395808"/>
+            <point key="canvasLocation" x="1050.4000000000001" y="32.833583208395808"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="9sq-aP-2VW">
@@ -204,7 +204,7 @@ tapping PIN.</string>
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
                                     <textField opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="bezel" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="7jB-vx-3qk">
-                                        <rect key="frame" x="136" y="0.0" width="71" height="60"/>
+                                        <rect key="frame" x="136" y="0.0" width="60" height="60"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="60" id="HsN-sl-hwJ"/>
                                             <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="60" id="Vhk-1v-4kX"/>
@@ -215,7 +215,7 @@ tapping PIN.</string>
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
                                     <textField opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="bezel" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="e3U-zB-kye">
-                                        <rect key="frame" x="215" y="0.0" width="60" height="60"/>
+                                        <rect key="frame" x="204" y="0.0" width="71" height="60"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="60" id="HhB-yS-p1w"/>
                                             <constraint firstAttribute="width" constant="60" id="SwH-GY-y7k"/>
@@ -239,7 +239,7 @@ tapping PIN.</string>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dF0-78-Ch5" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1623.2" y="-372.86356821589209"/>
+            <point key="canvasLocation" x="1962.4000000000001" y="-372.86356821589209"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="qRR-fm-V6C">
@@ -270,7 +270,7 @@ tapping PIN.</string>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="xAK-pG-uOk" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2240.8000000000002" y="-373.76311844077964"/>
+            <point key="canvasLocation" x="2580" y="-373.76311844077964"/>
         </scene>
         <!--My Tips and Information-->
         <scene sceneID="71E-jk-woD">
@@ -416,7 +416,7 @@ tapping PIN.</string>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="f2A-UR-zay" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4576.8000000000002" y="152.47376311844079"/>
+            <point key="canvasLocation" x="4916" y="152.47376311844079"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="pQd-nd-rwq">
@@ -504,7 +504,7 @@ tapping PIN.</string>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="eyI-Ps-zuu" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="112.8" y="-664.31784107946032"/>
+            <point key="canvasLocation" x="4194.3999999999996" y="-515.8920539730135"/>
         </scene>
         <!-- Setup New Treatment-->
         <scene sceneID="llV-MJ-fCI">
@@ -558,7 +558,39 @@ tapping PIN.</string>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="85i-TG-9M5" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-698.39999999999998" y="-134.48275862068968"/>
+            <point key="canvasLocation" x="-524" y="-359.37031484257875"/>
+        </scene>
+        <!--MyDailyPal Tip-->
+        <scene sceneID="df4-dP-wAF">
+            <objects>
+                <viewController id="AvI-uq-DGh" customClass="Screen7ViewController" customModule="MyDailyPal" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="ucR-Rs-irx">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="GLf-N6-Sib">
+                                <rect key="frame" x="0.0" y="64" width="375" height="201"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" red="0.113158937" green="0.79371524540000005" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            </view>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" text="Daily Tip" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="U7Z-s2-hDc">
+                                <rect key="frame" x="0.0" y="273" width="375" height="108"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="RVS-kb-kFv"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="MyDailyPal Tip" id="V9M-pK-NsR">
+                        <barButtonItem key="backBarButtonItem" title="BACK" id="1CZ-2v-UWo"/>
+                    </navigationItem>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="rdC-je-QMt" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="933.60000000000002" y="-1071.8140929535234"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="iKa-Tg-yHE">
@@ -576,7 +608,43 @@ tapping PIN.</string>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Kza-jq-jOU" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-199" y="33"/>
+            <point key="canvasLocation" x="367.19999999999999" y="32.833583208395808"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="szl-X8-Cl7">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="yGB-nJ-dSN" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="uSF-lH-eGo">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="JtM-9x-Pdc" kind="relationship" relationship="rootViewController" id="hVd-9E-hCm"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="2Ci-VP-hx7" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1241" y="-350"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="kKM-e4-cET">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Y1c-vV-o1d" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="f5z-xB-ZTP">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="AvI-uq-DGh" kind="relationship" relationship="rootViewController" id="6w9-T1-PyK"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="9ik-2P-5gK" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="62" y="-1059"/>
         </scene>
     </scenes>
     <resources>
